# arkanoid-space-ball

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Info.plist  Makefile  Makefile.in  README  README.md  TODO  aclocal.m4  arkanoidsb.cbp  arkanoidsb.depend  arkanoidsb.dsp  arkanoidsb.dsw  arkanoidsb.kdevelop  arkanoidsb.kdevelop.pcs  arkanoidsb.kdevses  arkanoidsb.layout  arkanoidsb.opt  arkanoidsb_Prefix.pch  arkanoidsb_linux.cbp  arkanoidsb_linux.depend  arkanoidsb_linux.layout  configure  configure.in  tags
English.lproj/: InfoPlist.strings
arkanoidsb.xcodeproj/: andrey.mode1  andrey.pbxuser  project.pbxproj
arkanoidsb_keygen/: arkanoidsb_keygen.cbp  keygen.cpp  main.cpp
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
keygen/: keygen.cbp
projects/: arkanoidsb.cbp
projects/osx/: Info.plist
projects/osx/Arkanoid Space Ball.xcodeproj/: project.pbxproj
projects/osx/Arkanoid Space Ball.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/osx/Arkanoid Space Ball.xcodeproj/project.xcworkspace/xcshareddata/: Arkanoid Space Ball.xcscmblueprint
projects/osx/Arkanoid Space Ball.xcodeproj/project.xcworkspace/xcuserdata/andrey.xcuserdatad/: UserInterfaceState.xcuserstate
projects/osx/Arkanoid Space Ball.xcodeproj/xcuserdata/andrey.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
projects/osx/Arkanoid Space Ball.xcodeproj/xcuserdata/andrey.xcuserdatad/xcschemes/: arkanoidsb.xcscheme  xcschememanagement.plist
projects/xcode-osx/: Info.plist  arkanoidsb.icns
projects/xcode-osx/English.lproj/: InfoPlist.strings
projects/xcode-osx/arkanoidsb.xcodeproj/: project.pbxproj
res/: arkanoidsb  arkanoidsb.icns  arkanoidsb_macosx_folder.xcf  bonuses.doc  bullets.xcf  energyhole.xcf  index.html  mainmenuicons.xcf  module01.it  module02.it  module03.s3m  reminderdlg.xcf  tutorial_dlg.xcf
src/: Info.plist.in  Makefile.am  Makefile.in  accessor.cpp  accessor.h  arkanoidsb.cpp  arkanoidsb.h  arkanoidsbgame.cpp  arkanoidsbgame.h  assets.cpp  assets.h  assets.m  assets.mm  ball.cpp  ball.h  bonus.cpp  bonus.h  bullet.cpp  bullet.h  coolfont.hpp  coolstring.cpp  coolstring.h  defines.h  energyhole.cpp  energyhole.h  exploision.cpp  exploision.h  game.cpp  game.h  generatelevel.cpp  generatelevel.h  glSDL.c  glSDL.h  leveleditor.cpp  leveleditor.h  mainmenu.cpp  mainmenu.h  monster.cpp  monster.h  mystring.cpp  (+16 more)
src/tools/rescompiler/: rescompiler
src/tools/rescompiler/src/: resource.cpp
src/videosystem/: videosystem.cpp  videosystem.h
templates/: h
tools/rescompiler/: Makefile
tools/rescompiler/src/: rescompiler.cpp  resource.cpp  resource.h
